# Universes

./: .gitignore  AGENTS.md  DICTIONARY.md  PROMPTS.md  README.md  TEMPLATE.md  TRACKER.md  flake.nix  justfile
MaterialLab/: .gitignore  AGENTS.md  DICTIONARY.md  README.md  TEMPLATE.md  TRACKER.md  justfile  pyproject.toml
MaterialLab/CoTypes/CoHom/CoDiscovery/: default.py
MaterialLab/CoTypes/CoHom/CoFabrication/: default.py
MaterialLab/CoTypes/CoHom/CoGeometry/: default.py
MaterialLab/CoTypes/CoHom/CoIngest/: default.py
MaterialLab/CoTypes/CoHom/CoMain/: default.py
MaterialLab/CoTypes/CoHom/CoSimulation/: default.py
MaterialLab/CoTypes/CoHom/CoVerify/: default.py
MaterialLab/CoTypes/Comonad/Trace/: default.py
MaterialLab/CoTypes/IO/CoIODiscoveryPhase/: default.py
MaterialLab/CoTypes/IO/CoIOFabricationPhase/: default.py
MaterialLab/CoTypes/IO/CoIOGeometryPhase/: default.py
MaterialLab/CoTypes/IO/CoIOIngestPhase/: default.py
MaterialLab/CoTypes/IO/CoIOMainPhase/: default.py
MaterialLab/CoTypes/IO/CoIOSimulationPhase/: default.py
MaterialLab/CoTypes/IO/CoIOVerifyPhase/: default.py
MaterialLab/Types/Dependent/MachineSpec/: default.py
MaterialLab/Types/Dependent/MaterialSpec/: default.py
MaterialLab/Types/Dependent/Orchestration/: default.py
MaterialLab/Types/Dependent/PrintProfile/: default.py
MaterialLab/Types/Dependent/SimConfig/: default.py
MaterialLab/Types/Dependent/ToleranceSpec/: default.py
MaterialLab/Types/Hom/Discovery/: default.py
MaterialLab/Types/Hom/Fabrication/: default.py
MaterialLab/Types/Hom/Geometry/: default.py
MaterialLab/Types/Hom/Ingest/: default.py
MaterialLab/Types/Hom/Main/: default.py
MaterialLab/Types/Hom/Simulation/: default.py
MaterialLab/Types/Hom/Verify/: default.py
MaterialLab/Types/IO/IODiscoveryPhase/: default.json  default.py
MaterialLab/Types/IO/IOFabricationPhase/: default.json  default.py
MaterialLab/Types/IO/IOGeometryPhase/: default.json  default.py
MaterialLab/Types/IO/IOIngestPhase/: default.json  default.py
MaterialLab/Types/IO/IOMainPhase/: default.json  default.py
MaterialLab/Types/IO/IOSimulationPhase/: default.json  default.py
MaterialLab/Types/IO/IOVerifyPhase/: default.json  default.py
MaterialLab/Types/Identity/Design/: default.py
MaterialLab/Types/Identity/Material/: default.py
MaterialLab/Types/Identity/Run/: default.py
MaterialLab/Types/Inductive/CadFormat/: default.py
MaterialLab/Types/Inductive/LoadCase/: default.py
MaterialLab/Types/Inductive/ManufMethod/: default.py
MaterialLab/Types/Inductive/MaterialClass/: default.py
MaterialLab/Types/Inductive/MeshData/: default.py
MaterialLab/Types/Monad/Alarm/: default.py
MaterialLab/Types/Monad/Error/: default.py
MaterialLab/Types/Monad/Metric/: default.py
MaterialLab/Types/Monad/Observability/: default.py
MaterialLab/Types/Monad/Store/: default.py
Modules/Monads/IOWorkspacePhase/Fab/: AGENTS.md  README.md  justfile  pyproject.toml
RL-Lab/: .gitignore  AGENTS.md  DICTIONARY.md  PROMPTS.md  README.md  TEMPLATE.md  TRACKER.md  justfile  pyproject.toml
RL-Lab/CoTypes/CoDependent/: README.md
RL-Lab/CoTypes/CoDependent/Alarm/: default.py
RL-Lab/CoTypes/CoDependent/Constraint/: default.py
RL-Lab/CoTypes/CoDependent/Execution/: default.py
RL-Lab/CoTypes/CoDependent/Filter/: default.py
RL-Lab/CoTypes/CoDependent/Optimize/: default.py
RL-Lab/CoTypes/CoDependent/Search/: default.py
RL-Lab/CoTypes/CoDependent/Threshold/: default.py
RL-Lab/CoTypes/CoHom/: README.md
RL-Lab/CoTypes/CoHom/Compose/: default.py
RL-Lab/CoTypes/CoHom/Discovery/: default.py
RL-Lab/CoTypes/CoHom/Eval/: default.py
RL-Lab/CoTypes/CoHom/Feature/: default.py
RL-Lab/CoTypes/CoHom/Ingest/: default.py
RL-Lab/CoTypes/CoHom/Main/: default.py
RL-Lab/CoTypes/CoHom/Project/: default.py
RL-Lab/CoTypes/CoIO/: README.md
RL-Lab/CoTypes/CoIdentity/: README.md
RL-Lab/CoTypes/CoInductive/: README.md
RL-Lab/CoTypes/CoProduct/: README.md
RL-Lab/CoTypes/Comonad/: README.md
RL-Lab/Types/Dependent/: README.md
RL-Lab/Types/Hom/: README.md
RL-Lab/Types/IO/: README.md
RL-Lab/Types/Identity/: README.md
RL-Lab/Types/Inductive/: README.md
RL-Lab/Types/Monad/: README.md
RL-Lab/Types/Product/: README.md
(+1417 files in other folders)
