[project]
name = "rl-sandbox"
version = "0.4.0"
description = "Type-theoretic RL trading sandbox with wavelet-denoised input geometry"
requires-python = ">=3.12,<3.14"
dependencies = [
    "gymnasium>=1.0",
    "gym-trading-env>=0.3",
    "stable-baselines3[extra]>=2.3",
    "yfinance>=0.2",
    "PyWavelets>=1.6",
    "pandas-ta>=0.3",
    "matplotlib>=3.8",
    "pandas>=2.0",
    "numpy>=1.26",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "optuna>=3.0",
    "alpaca-py>=0.30",
    "sseclient-py>=1.8",
    "rerun-sdk>=0.22",
    "sqlalchemy>=2.0",
    "python-dotenv>=1.0",
    "returns>=0.23",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["Types", "CoTypes"]
