[project]
name = "fab-cyberdeck"
version = "0.1.0"
description = "Full-spectrum analysis cyberdeck fabrication lab"
requires-python = ">=3.12"
dependencies = [
    "cadquery>=2.4",
    "build123d>=0.7",
    "trimesh>=4.0",
    "numpy>=1.26",
    "pandas>=2.0",
    "matplotlib>=3.8",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["Types", "Monads", "Env"]
