[project]
name = "sov"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "typer>=0.12",
    "rich>=13.0",
]

[project.optional-dependencies]
form = ["cadquery>=2.4", "trimesh>=4.0", "numpy-stl>=3.0"]
signal = ["scipy>=1.12"]
space = ["rasterio>=1.3", "folium>=0.16"]
model = ["pvlib>=0.11", "pandas>=2.0", "scipy>=1.12", "matplotlib>=3.8"]
network = ["scapy>=2.5"]
crypto = ["monero>=1.1"]
media = ["pillow>=10.0"]
audio = ["soundfile>=0.12", "numpy>=1.26"]
material = ["rdkit>=2024.3"]
all = ["sov[form,signal,space,model,network,crypto,media,audio,material]"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
