[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "rl-module"
version = "0.1.0"
dependencies = [
    "stable-baselines3",
    "gymnasium",
    "pydantic-settings",
]

[project.scripts]
rl-train = "Universe.Train.Bindings.Scripts.index:main"
rl-eval = "Universe.Eval.Bindings.Scripts.index:main"

[tool.setuptools.packages.find]
where = [".."]
